// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TaggerGridPager /> Snapshots renders correctly for default props 1`] = `
<Box
  announce={false}
  className="TaggerGridPager"
  direction="row"
  flex={true}
  focusable={true}
  pad="none"
  responsive={true}
  tag="div"
>
  <Box
    announce={false}
    className="TaggerGridPagerSegment"
    direction="column"
    focusable={true}
    pad="none"
    responsive={true}
    tag="div"
  >
    <div
      className="toggleBtn expandBtn"
      onClick={[Function]}
      title="Show/Hide Search Controls"
    />
  </Box>
  <Box
    announce={false}
    className="TaggerGridPagerSegment"
    direction="column"
    focusable={true}
    pad="none"
    responsive={true}
    tag="div"
  >
    <div
      className="ResultsPerPage"
    >
      Results per Page:
      <select
        onChange={[Function]}
        value={700}
      >
        <option
          key="option-10"
          value={10}
        >
          10
        </option>
        <option
          key="option-25"
          value={25}
        >
          25
        </option>
        <option
          key="option-50"
          value={50}
        >
          50
        </option>
        <option
          key="option-100"
          value={100}
        >
          100
        </option>
        <option
          key="option-250"
          value={250}
        >
          250
        </option>
        <option
          key="option-500"
          value={500}
        >
          500
        </option>
      </select>
    </div>
  </Box>
  <Box
    announce={false}
    className="TaggerGridPagerSegment"
    direction="column"
    focusable={true}
    pad="none"
    responsive={true}
    tag="div"
  >
    <div
      className="ChooseExactPage"
    >
      Choose Exact Page:
      <select
        onChange={[Function]}
        value={1}
      >
        <option
          key="option-1"
          value={1}
        >
          1
        </option>
        <option
          key="option-2"
          value={2}
        >
          2
        </option>
      </select>
    </div>
  </Box>
  <Box
    announce={false}
    className="TaggerGridPagerSegment"
    direction="column"
    focusable={true}
    pad="none"
    responsive={true}
    tag="div"
  >
    <div
      className="PagesButtons"
    >
      <button
        className="pagerBtn"
        disabled={true}
        key="btn-prev"
        onClick={[Function]}
      >
        Prev
      </button>
      <button
        className="pagerBtn active"
        key="btn-1"
        onClick={[Function]}
      >
        1
      </button>
      <button
        className="pagerBtn"
        key="btn-2"
        onClick={[Function]}
      >
        2
      </button>
      <button
        className="pagerBtn"
        disabled={false}
        key="btn-next"
        onClick={[Function]}
      >
        Next
      </button>
    </div>
  </Box>
</Box>
`;

exports[`<TaggerGridPager /> Snapshots renders correctly for default props with className 1`] = `
<Box
  announce={false}
  className="TaggerGridPager"
  direction="row"
  flex={true}
  focusable={true}
  pad="none"
  responsive={true}
  tag="div"
>
  <Box
    announce={false}
    className="TaggerGridPagerSegment"
    direction="column"
    focusable={true}
    pad="none"
    responsive={true}
    tag="div"
  >
    <div
      className="ResultsPerPage"
    >
      Results per Page:
      <select
        onChange={[Function]}
        value={4}
      >
        <option
          key="option-10"
          value={10}
        >
          10
        </option>
        <option
          key="option-25"
          value={25}
        >
          25
        </option>
        <option
          key="option-50"
          value={50}
        >
          50
        </option>
        <option
          key="option-100"
          value={100}
        >
          100
        </option>
        <option
          key="option-250"
          value={250}
        >
          250
        </option>
        <option
          key="option-500"
          value={500}
        >
          500
        </option>
      </select>
    </div>
  </Box>
</Box>
`;
